--- a/etc/app-config.json
+++ b/etc/app-config.json
@@ -9,6 +9,7 @@
     {
       "model": "viam:camera:csi",
       "attributes": {
+        "video_path": "0",
         "width_px": 1920,
         "height_px": 1080,
         "frame_rate": 30,
