--- a/etc/viam-csi-jetson-arm64.yml
+++ b/etc/viam-csi-jetson-arm64.yml
@@ -41,12 +41,16 @@ AppDir:
     - libgcc-s1:arm64
     - libpcre3:arm64
     - zlib1g:arm64
+      
   files:
     include:
-    - gstreamer1.0-plugins-base
-    - gstreamer1.0-plugins-good
-    - /usr/local/lib/libprotobuf.so.32
-    - /usr/local/lib/libviamsdk.so.noabi
+    - usr/local/lib/libprotobuf.so.32
+    - usr/local/lib/libviamsdk.so.noabi
+    exclude:
+    - usr/share/doc
+    - usr/share/man
+    - usr/lib/x86_64-linux-gnu/gconv
+
 
 AppImage:
   arch: aarch64
