Remove libfuse install

--- a/etc/Dockerfile.jetson
+++ b/etc/Dockerfile.jetson
@@ -98,7 +98,7 @@ RUN cd ${HOME}/opt/src && \
 # install viam-csi
 RUN cp -r ${HOME}/opt/src/viam-cpp-sdk/build/install/* /usr/local/
 
-# install dev files
+# install GST dev files
 RUN apt-get install -y gstreamer1.0-tools gstreamer1.0-alsa \
      gstreamer1.0-plugins-base gstreamer1.0-plugins-good \
      gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly \
@@ -107,10 +107,9 @@ RUN apt-get install -y libgstreamer1.0-dev \
      libgstreamer-plugins-base1.0-dev \
      libgstreamer-plugins-good1.0-dev \
      libgstreamer-plugins-bad1.0-dev
-RUN apt-get -y install libgtest-dev
-RUN apt-get -y install libfuse-dev
 
-RUN apt-get -y update
+# install gtest
+RUN apt-get -y install libgtest-dev
 
 ADD ../ /root/opt/src/viam-csi
 RUN cd /root/opt/src && \
