--- a/etc/Dockerfile.test.jetson
+++ b/etc/Dockerfile.test.jetson
@@ -7,5 +7,5 @@ ENV HOME /root
 RUN apt-get -y update
 RUN apt install -y libfuse-dev
 
-# Copy appimage/binary
+# Copy appimage and binary
 ADD ../bin /usr/bin
