--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,17 +13,20 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - arch: [ubuntu-latest]
+            image: ghcr.io/viamrobotics/canon:amd64-cache
+            platform: linux/amd64
           - arch: [buildjet-2vcpu-ubuntu-2204-arm]
             image: ghcr.io/viamrobotics/canon:arm64-cache
             platform: linux/arm64
-      runs-on: ${{ matrix.arch }}
-      container:
-        image: ${{ matrix.image }}
-        options: --platform ${{ matrix.platform }}
-      timeout-minutes: 5
-      outputs:
-        date: ${{ steps.build_date.outputs.date }}
+    runs-on: ${{ matrix.arch }}
+    container:
+      image: ${{ matrix.image }}
+      options: --platform ${{ matrix.platform }}
+    timeout-minutes: 15
+    outputs:
+      date: ${{ steps.build_date.outputs.date }}
 
     steps:
-      - name: Checkout Code
+      - name: Check out code
         uses: actions/checkout@v3
