--- a/etc/Dockerfile.mod.jetson
+++ b/etc/Dockerfile.mod.jetson
@@ -1,6 +1,7 @@
 ARG BASE_TAG
 ARG BASE_NAME
-FROM ${BASE_NAME}:${BASE_TAG}
+ARG HUB_USER
+FROM ghcr.io/${HUB_USER}/${BASE_NAME}:${BASE_TAG}
 
 # install GST dev files
 RUN apt-get install -y gstreamer1.0-tools gstreamer1.0-alsa \
