--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         include:
           - arch: [buildjet-2vcpu-ubuntu-2204-arm]
-            image: ghcr.io/viamrobotics/canon:arm64-cache
+            image: ghcr.io/seanavery/viam-cpp-jetson:0.0.1
             platform: linux/arm64
     runs-on: ${{ matrix.arch }}
     container:
@@ -29,14 +29,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Clean build artifacts
         run: make clean
-      - name: Build cmake and appimage
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          file: etc/Dockerfile.mod.jetson
-          tags: viam-csi-mod:0.0.1
-          build-args: |
-            HUB_USER=seanavery
-            BASE_TAG=0.0.1
-            BASE_NAME=viam-cpp-jetson
+      - name: Build binary with cmake 
+        run: make build
+     - name: Build appimage with appimage-builder
+        run: make package
         
