--- a/etc/Dockerfile.test.jetson
+++ b/etc/Dockerfile.test.jetson
@@ -1,5 +1,5 @@
 ARG L4T_TAG
-ARG PACK_TAG
+
 FROM nvcr.io/nvidia/l4t-base:${L4T_TAG}
 
 ENV HOME /root
@@ -10,5 +10,5 @@ RUN apt install -y libfuse-dev
 # Copy appimage and binary
 ADD ../bin /usr/bin
 
-# TODO: automatically fill file name with ARG
-CMD ["/usr/bin/viam-csi-0.0.1-aarch64.AppImage"]
+# Run the appimage for 10 seconds and check that it exits with timeout
+CMD ["/bin/sh", "-c", "timeout 10 $PACK_FILE || $? == 124"]
