--- a/etc/Dockerfile.test.jetson
+++ b/etc/Dockerfile.test.jetson
@@ -11,4 +11,10 @@ RUN apt install -y libfuse-dev
 ADD ../bin /usr/bin
 
 # Run the appimage for 10 seconds and check that it exits with timeout
-CMD ["/bin/sh", "-c", "timeout 10 $PACK_FILE || $? == 124"]
+CMD ["/bin/sh", "-c", "timeout 10 $PACK_FILE; \
+                       status=$?; \
+                       if [ $status -eq 124 ]; then \
+                         echo 'Command timed out'; \
+                       else \
+                         exit $status; \
+                       fi"]
