--- a/etc/Dockerfile.base.jetson
+++ b/etc/Dockerfile.base.jetson
@@ -96,3 +96,17 @@ RUN cd ${HOME}/opt/src && \
     git clone https://github.com/AppImageCrafters/appimage-builder.git && \
     cd appimage-builder && \
     pip3 install ./
+
+# install docker
+RUN apt-get -y install \
+    apt-transport-https \
+    ca-certificates \
+    curl \
+    gnupg \
+    lsb-release && \
+    curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg && \
+    echo \
+        "deb [arch=arm64 signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/ubuntu \
+        $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null && \ 
+    apt-get -y update && \
+    apt-get -y install docker-ce docker-ce-cli containerd.io
