--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build viam-csi appimage
         run: make package
 
-      - name: Copy binary and appimage to bin folde 
+      - name: Copy binary and appimage to bin folder
         run: make bin
 
       - name: Run appimage in fresh L4T instance
