--- a/etc/Dockerfile.test.jetson
+++ b/etc/Dockerfile.test.jetson
@@ -7,10 +7,10 @@ ENV HOME /root
 RUN apt-get -y update
 RUN apt install -y libfuse-dev
 
-# Copy appimage and binary
+# copy appimage and binary
 ADD ../bin /usr/bin
 
-# Run the appimage for 10 seconds 
+# run the appimage for 10 seconds 
 # and check that it exits with timeout
 CMD ["/bin/sh", "-c", "timeout 10 $PACK_FILE; \
                        status=$?; \
