remove --platform opt

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: [buildjet-2vcpu-ubuntu-2204-arm]
     container:
       image: ghcr.io/seanavery/viam-cpp-jetson:0.0.1
-      options: --platform linux/arm64
+      options: linux/arm64
     steps:
     - name: Check out code
       uses: actions/checkout@v3
