update url; only upload on release

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
        make test-package
 
     - uses: viamrobotics/upload-module@main
-      # if: github.event_name == 'release' # <-- once the action is working, uncomment this so you only upload on release
+      if: github.event_name == 'release'
       with:
         module-path: module.tar.gz
         platform: linux/arm64
