Revert "remove only upload on release logic"
This reverts commit 98f0c8d65ccea7ab7288f45410b056120258db20.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,7 @@ jobs:
        make test-package
 
     - uses: viamrobotics/upload-module@main
+      if: github.event_name == 'release'
       with:
         module-path: module.tar.gz
         platform: linux/arm64
