support libcamera gst pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ link_directories(
 )
 
 # Main executable
-add_executable(${PROJECT_NAME} main.cpp csi_camera.cpp)
+add_executable(${PROJECT_NAME} main.cpp csi_camera.cpp utils.cpp)
 
 target_link_libraries(${PROJECT_NAME} 
         ${GSTREAMER_LIBRARIES} 
