--- a/etc/Dockerfile.test
+++ b/etc/Dockerfile.test
@@ -1,11 +1,11 @@
-ARG L4T_TAG
+ARG TEST_BASE
 
-FROM nvcr.io/nvidia/l4t-base:${L4T_TAG}
+FROM ${TEST_BASE}
 
 ENV HOME /root
 
 RUN apt-get -y update
-RUN apt install -y libfuse-dev
+RUN apt install -y libfuse-dev libgstreamer-plugins-base1.0-dev --fix-missing
 
 # copy appimage and binary
 ADD ../bin /usr/bin
