--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
 
     - name: Run appimage in fresh L4T instance
       run: |
-       make image-test
-       make test-package
+       make image-test TARGET=jetson
+       make test-package TARGET=jetson
 
     - uses: viamrobotics/upload-module@main
       if: github.event_name == 'release'
