RSDK-4372 - Add appimage test for debian bookworm (#8)
* Move to common dockerfiles

* Add pi/jetson targets

* Add target to test steps

* Create PR CI target

* Rename request job

* Add debian test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,9 +46,14 @@ jobs:
 
       - name: Run appimage in fresh L4T instance
         run: |
-          make image-test
-          make test-package
+          make image-test TARGET=jetson
+          make test-package TARGET=jetson
       
+      - name: Run appimage in fresh debian instance
+        run: |
+          make image-test TARGET=pi
+          make test-package TARGET=pi
+
       - name: Authorize GCP upload
         uses: google-github-actions/auth@v1
         with:
