Add pthread to appimage bundle

--- a/etc/Dockerfile.test
+++ b/etc/Dockerfile.test
@@ -7,10 +7,10 @@ ENV HOME /root
 RUN apt-get -y update
 RUN apt install -y libfuse-dev libgstreamer-plugins-base1.0-dev --fix-missing
 
-# copy appimage and binary
+# Copy appimage and binary
 ADD ../bin /usr/bin
 
-# run the appimage for 10 seconds 
+# Run the appimage for 10 seconds
 # and check that it exits with timeout
 CMD ["/bin/sh", "-c", "timeout 10 $PACK_FILE; \
                        status=$?; \
