Add example config for module registry

--- a/etc/local-app-config.json
+++ b/etc/local-app-config.json
@@ -12,7 +12,7 @@
         "width_px": 1920,
         "height_px": 1080,
         "frame_rate": 30,
-        "debug": true
+        "debug": false
       },
       "depends_on": [],
       "name": "csicam_test",
