--- a/etc/local-app-config.json
+++ b/etc/local-app-config.json
@@ -9,11 +9,10 @@
     {
       "model": "viam:camera:csi",
       "attributes": {
-        "video_path": "0",
         "width_px": 1920,
         "height_px": 1080,
         "frame_rate": 30,
-        "debug": true
+        "debug": false
       },
       "depends_on": [],
       "name": "csicam_test",
