--- a/.github/workflows/request.yaml
+++ b/.github/workflows/request.yaml
@@ -22,6 +22,9 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v3
 
+    - name: Set TARGET environment variable
+      run: echo "TARGET=${{ matrix.TARGET }}" >> $GITHUB_ENV
+
     - name: Clean build artifacts
       run: make clean
 
