--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,61 +11,58 @@ jobs:
   appimage:
     name: AppImage Build
     strategy:
-      fail-fast: false
       matrix:
         include:
-          - arch: [buildjet-2vcpu-ubuntu-2204-arm]
-            image: ghcr.io/seanavery/viam-cpp-base:0.0.2
-            platform: linux/arm64
-    runs-on: ${{ matrix.arch }}
+          - container: ghcr.io/seanavery/viam-cpp-base:0.0.2
+            TARGET: jetson
+          - container: ghcr.io/seanavery/viam-cpp-base-pi:0.0.2
+            TARGET: pi
     container:
-      image: ${{ matrix.image }}
-      options: --platform ${{ matrix.platform }}
-    timeout-minutes: 15
-    outputs:
-      date: ${{ steps.build_date.outputs.date }}
+      image: ${{ matrix.container }}
+      options: --platform linux/arm64
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v3
+
+    - name: Set TARGET environment variable
+      run: echo "TARGET=${{ matrix.TARGET }}" >> $GITHUB_ENV
 
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
+    - name: Check out code
+      uses: actions/checkout@v3
 
-      - name: Clean build artifacts
-        run: make clean
+    - name: Clean build artifacts
+      run: make clean
 
-      - name: Install module dependencies
-        run: make dep
+    - name: Install module dependencies
+      run: make dep
 
-      - name: Build viam-csi binary
-        run: make build
+    - name: Build viam-csi binary
+      run: make build
 
-      - name: Build viam-csi appimage
-        run: make package
+    - name: Build viam-csi appimage
+      run: make package
 
-      - name: Copy binary and appimage to bin folder
-        run: make bin
+    - name: Copy binary and appimage to bin folder
+      run: make bin
 
-      - name: Run appimage in fresh L4T instance
-        run: |
-          make image-test TARGET=jetson
-          make test-package TARGET=jetson
-      
-      - name: Run appimage in fresh debian instance
-        run: |
-          make image-test TARGET=pi
-          make test-package TARGET=pi
+    - name: Run appimage in freshinstance
+      run: |
+        make image-test
+        make test-package
 
-      - name: Authorize GCP upload
-        uses: google-github-actions/auth@v1
-        with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+    - name: Authorize GCP upload
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
 
-      - name: Deploy Files
-        uses: google-github-actions/upload-cloud-storage@v0.10.4
-        with:
-          headers: "cache-control: no-cache"
-          path: 'bin'
-          destination: 'packages.viam.com/apps/csi-camera/'
-          glob: '*aarch64*'
-          parent: false
-          gzip: false
+    - name: Deploy Files
+      uses: google-github-actions/upload-cloud-storage@v0.10.4
+      with:
+        headers: "cache-control: no-cache"
+        path: 'bin'
+        destination: 'packages.viam.com/apps/csi-camera/${{ env.TARGET }}'
+        glob: '*aarch64*'
+        parent: false
+        gzip: false
 # TODO: Run cpp tests
