Add authorization to workflow

--- a/.github/workflows/request.yml
+++ b/.github/workflows/request.yml
@@ -47,6 +47,11 @@ jobs:
           make image-test
           make test-package
 
+      - name: Authorize GCP upload
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
       - name: Deploy Files
         uses: google-github-actions/upload-cloud-storage@v0.10.4
         with:
