--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,60 +9,85 @@ on:
 
 jobs:
   appimage:
-    name: AppImage Build
+    name: Build/Test/Upload latest
+    runs-on: [buildjet-2vcpu-ubuntu-2204-arm]
     strategy:
       matrix:
         include:
           - container: ghcr.io/seanavery/viam-cpp-base:0.0.2
             TARGET: jetson
+            META_PATH: meta.json
           - container: ghcr.io/seanavery/viam-cpp-base-pi:0.0.2
             TARGET: pi
+            META_PATH: meta-pi.json
     container:
       image: ${{ matrix.container }}
       options: --platform linux/arm64
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v3
-
-    - name: Set TARGET environment variable
-      run: echo "TARGET=${{ matrix.TARGET }}" >> $GITHUB_ENV
 
     steps:
-    - name: Check out code
-      uses: actions/checkout@v3
+      - name: Check out code
+        uses: actions/checkout@v3
 
-    - name: Clean build artifacts
-      run: make clean
+      - name: Set environment variables
+        run: |
+          echo "TARGET=${{ matrix.TARGET }}" >> $GITHUB_ENV
+          echo "META_PATH=${{ matrix.META_PATH }}" >> $GITHUB_ENV
 
-    - name: Install module dependencies
-      run: make dep
+      - name: Clean build artifacts
+        run: make clean
 
-    - name: Build viam-csi binary
-      run: make build
+      - name: Install module dependencies
+        run: make dep
 
-    - name: Build viam-csi appimage
-      run: make package
+      - name: Build viam-csi binary
+        run: make build
 
-    - name: Copy binary and appimage to bin folder
-      run: make bin
+      - name: Build viam-csi appimage
+        run: make package
 
-    - name: Run appimage in freshinstance
-      run: |
-        make image-test
-        make test-package
+      - name: Copy binary and appimage to bin folder
+        run: make bin
 
-    - name: Authorize GCP upload
-      uses: google-github-actions/auth@v1
-      with:
-        credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      - name: Run appimage in fresh instance
+        run: |
+          make image-test
+          make test-package
 
-    - name: Deploy Files
-      uses: google-github-actions/upload-cloud-storage@v0.10.4
-      with:
-        headers: "cache-control: no-cache"
-        path: 'bin'
-        destination: 'packages.viam.com/apps/csi-camera/${{ env.TARGET }}'
-        glob: '*aarch64*'
-        parent: false
-        gzip: false
-# TODO: Run cpp tests
+      - name: Authorize GCP upload
+        uses: google-github-actions/auth@v1
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: Deploy Files
+        uses: google-github-actions/upload-cloud-storage@v0.10.4
+        with:
+          headers: "cache-control: no-cache"
+          path: 'bin'
+          destination: 'packages.viam.com/apps/csi-camera/${{ env.TARGET }}'
+          glob: '*aarch64*'
+          parent: false
+          gzip: false
+
+      - name: Get commit count
+          id: commit_count
+          run: echo "COMMIT_COUNT=$(git rev-list --count HEAD)" >> $GITHUB_EN
+
+      - name: Get latest release version
+        id: get_version
+        run: |
+          LATEST_RELEASE=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r .tag_name)
+          echo "LATEST_RELEASE_VERSION=$LATEST_RELEASE" >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update module registry
+        uses: viamrobotics/upload-module@main
+        if: github.event_name == 'push'
+        with:
+          meta-path: ${{ env.META_PATH }}
+          module-path: module.tar.gz
+          platform: linux/arm64
+          version: ${{ env.LATEST_RELEASE_VERSION }}-${{ github.ref_name }}.${{ env.COMMIT_COUNT }}
+          key-id: ${{ secrets.viam_key_id }}
+          key-value: ${{ secrets.viam_key_value }}
+
