--- a/etc/Dockerfile.mod.pi
+++ b/etc/Dockerfile.mod.pi
@@ -32,19 +32,17 @@ RUN apt-get -y install \
     gstreamer1.0-plugins-ugly \
     libgstreamer-plugins-base1.0-dev
 
-# Install gtest
+# Install GoogleTest
 RUN apt-get -y install libgtest-dev
 RUN cd /usr/src/gtest && \
-    cmake CMakeLists.txt && \
-    make && \
-    cp lib/*.a /usr/lib
+    cmake ./ && \
+    make
 RUN apt-get install libgmock-dev && \
     cd /usr/src/googletest/googlemock/ && \
-    mkdir build && \
-    cmake .. && \
-    make && \
-    cp lib/*.a /usr/lib
+    cmake ./ && \
+    make
 
+# Build and package the CSI camera driver
 ADD ../ /root/opt/src/csi-camera
 RUN cd /root/opt/src && \
     cd csi-camera && \
