--- a/etc/Dockerfile.mod.pi
+++ b/etc/Dockerfile.mod.pi
@@ -1,8 +1,6 @@
-ARG BASE_TAG
-ARG BASE_NAME
-ARG HUB_USER
+ARG BASE_IMG
 
-FROM ghcr.io/${HUB_USER}/${BASE_NAME}:${BASE_TAG}
+FROM ${BASE_IMG}
 
 ENV DEBIAN_FRONTEND=noninteractive
 
