--- a/etc/Dockerfile.base.bullseye
+++ b/etc/Dockerfile.base.bullseye
@@ -100,5 +100,5 @@ RUN curl -fsSL https://download.docker.com/linux/debian/gpg | gpg --dearmor -o /
 RUN echo \
     "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
     $(lsb_release -cs) stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-RUN apt-get update
+RUN apt-get -y update
 RUN apt-get -y install docker-ce docker-ce-cli containerd.io
