Fix appimage script

--- a/etc/Dockerfile.mod.pi
+++ b/etc/Dockerfile.mod.pi
@@ -5,7 +5,7 @@ FROM ${BASE_IMG}
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install software-properties-common to get apt-add-repository
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get -y update && apt-get install -y --no-install-recommends \
     software-properties-common
 
 # Add the Raspberry Pi repository
