--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   publish:
-    runs-on: [buildjet-2vcpu-ubuntu-2204-arm]
+    runs-on: buildjet-2vcpu-ubuntu-2204-arm
     strategy:
      matrix:
         include:
@@ -53,7 +53,7 @@ jobs:
         if: github.event_name == 'release'
         with:
           meta-path: ${{ env.META_PATH }}
-          module-path: module.tar.gz
+          module-path: bin/viam-csi-latest-aarch64.AppImage
           platform: linux/arm64
           version: ${{ github.ref_name }}
           key-id: ${{ secrets.viam_key_id }}
