--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,28 +6,33 @@ on:
       - '*'
     paths-ignore:
       - 'README.md'
+      - 'docs/**'
 
 jobs:
   appimage:
-    name: AppImage Build
+    name: Build/Test/Upload latest
+    runs-on: buildjet-2vcpu-ubuntu-2204-arm
     strategy:
-      fail-fast: false
       matrix:
         include:
-          - arch: [buildjet-2vcpu-ubuntu-2204-arm]
-            image: ghcr.io/seanavery/viam-cpp-base:0.0.2
-            platform: linux/arm64
-    runs-on: ${{ matrix.arch }}
+          - container: ghcr.io/seanavery/viam-cpp-base:0.0.2
+            TARGET: jetson
+            META_PATH: meta.json
+          - container: ghcr.io/seanavery/viam-cpp-base-pi:0.0.2
+            TARGET: pi
+            META_PATH: meta-pi.json
     container:
-      image: ${{ matrix.image }}
-      options: --platform ${{ matrix.platform }}
-    timeout-minutes: 15
-    outputs:
-      date: ${{ steps.build_date.outputs.date }}
+      image: ${{ matrix.container }}
+      options: --platform linux/arm64
 
     steps:
       - name: Check out code
         uses: actions/checkout@v3
+
+      - name: Set environment variables
+        run: |
+          echo "TARGET=${{ matrix.TARGET }}" >> $GITHUB_ENV
+          echo "META_PATH=${{ matrix.META_PATH }}" >> $GITHUB_ENV
 
       - name: Clean build artifacts
         run: make clean
@@ -44,15 +49,10 @@ jobs:
       - name: Copy binary and appimage to bin folder
         run: make bin
 
-      - name: Run appimage in fresh L4T instance
+      - name: Run appimage in fresh instance
         run: |
-          make image-test TARGET=jetson
-          make test-package TARGET=jetson
-      
-      - name: Run appimage in fresh debian instance
-        run: |
-          make image-test TARGET=pi
-          make test-package TARGET=pi
+          make image-test
+          make test-package
 
       - name: Authorize GCP upload
         uses: google-github-actions/auth@v1
@@ -64,8 +64,35 @@ jobs:
         with:
           headers: "cache-control: no-cache"
           path: 'bin'
-          destination: 'packages.viam.com/apps/csi-camera/'
+          destination: 'packages.viam.com/apps/csi-camera/${{ env.TARGET }}'
           glob: '*aarch64*'
           parent: false
           gzip: false
-# TODO: Run cpp tests
+
+      - name: Get latest release version
+        id: get_version
+        run: |
+          apt install -y jq
+          LATEST_RELEASE=$(curl -s https://api.github.com/repos/${{ github.repository }}/releases/latest | jq -r .tag_name)
+          echo "LATEST_RELEASE_VERSION=$LATEST_RELEASE" >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Testing module env variables
+        run: |
+          echo "TARGET=${{ env.TARGET }}"
+          echo "META_PATH=${{ env.META_PATH }}"
+          echo "COMMIT_COUNT=${{ env.COMMIT_COUNT }}"
+          echo "LATEST_RELEASE_VERSION=${{ env.LATEST_RELEASE_VERSION }}"
+          echo "version: ${{ env.LATEST_RELEASE_VERSION }}-${{ github.ref_name }}.${{ github.run_number }}"
+
+      - name: Update module registry
+        uses: viamrobotics/upload-module@main
+        if: github.event_name == 'push'
+        with:
+          meta-path: ${{ env.META_PATH }}
+          module-path: bin/viam-csi-latest-aarch64.AppImage
+          platform: linux/arm64
+          version: ${{ env.LATEST_RELEASE_VERSION }}-${{ github.ref_name }}.${{ github.run_number }}
+          key-id: ${{ secrets.viam_key_id }}
+          key-value: ${{ secrets.viam_key_value }}
