--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Upload Module
         uses: viamrobotics/upload-module@main
-        if: github.event_name == 'release'
+        if: startsWith(github.ref, 'refs/tags/') 
         with:
           meta-path: ${{ env.META_PATH }}
           module-path: bin/viam-csi-latest-aarch64.AppImage
