--- a/etc/Dockerfile.mod.pi
+++ b/etc/Dockerfile.mod.pi
@@ -2,6 +2,7 @@ ARG BASE_IMG
 
 FROM ${BASE_IMG}
 
+ENV HOME /root
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install software-properties-common to get apt-add-repository
@@ -19,7 +20,6 @@ RUN apt-get -y update
 
 # Install GST dev files
 RUN apt-get -y install \
-    libcamera0 \
     libgstreamer1.0-dev \
     libgstreamer1.0-0 \
     gstreamer1.0-x \
@@ -41,6 +41,17 @@ RUN apt-get install libgmock-dev && \
     cmake ./ && \
     make && \
     cp lib/*.a /usr/lib; 
+
+# Install Raspberry Pi libcamera from source
+RUN mkdir -p ${HOME}/opt/src
+RUN apt-get -y install meson
+RUN apt-get -y install libyaml-dev python3-yaml python3-ply python3-jinja2
+RUN cd ${HOME}/opt/src && \
+    git clone https://github.com/raspberrypi/libcamera.git && \
+    cd libcamera && \
+    meson setup build --prefix=/usr && \
+    ninja -C build install
+RUN rm -rf ${HOME}/opt/src/libcamera
 
 # Build and package the CSI camera driver
 ADD ../ /root/opt/src/csi-camera
